--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">DailyReport</string>
-    <string name="app_name2">내용</string>
+    <string name="app_name">SmartFarm</string>
+    <string name="app_name2">DailyReport</string>
 
     <string name="title1">9월 10일</string>
     <string name="content1">잎이 새로 나오기 시작</string>
